Fix whitespace around suggestions and thumbs-up/down buttons
Make the thumbs-up/down buttons take up the same amount of vertical
space as the suggestions, to prevent the height of the entire row from
jumping when the suggestions are being removed.

Bug: 364306228
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6305804
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/ai_assistance/components/userActionRow.css
+++ b/front_end/panels/ai_assistance/components/userActionRow.css
@@ -17,6 +17,7 @@
     display: flex;
     align-items: center;
     gap: var(--sys-size-2);
+    padding: var(--sys-size-4) 0;
   }
 
   .vertical-separator {
